in progress creating product

--- a/purchase_list_csharp/appsettings.json
+++ b/purchase_list_csharp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;DataBase=purchaselist;Uid=root;Pwd=''"
+    "DefaultConnection": "Server=200.98.173.80;DataBase=purchaselist;Uid=purchaselist_admin;Pwd='kWFQWQb0r0b9BLr'"
   },
   "Logging": {
     "LogLevel": {
